[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"

actix-session = {version = "0.11.0", features = ["redis-session"]}
actix-identity = "0.9.0"

argon2 = "0.5.3"

serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

sqlx = {version="0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"]}